# proofrail-hermes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md  __init__.py  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  github-metadata.md  loopcraft-functional-roadmap.md
proofrail/: __init__.py  audit.py  classifier.py  constants.py  models.py  path_utils.py  plugin.py  result_status.py  session_state.py  settings.py  summarize.py  task_ledger.py  task_understanding.py  text_utils.py  tooling.py  validation.py
scripts/: check.release.py  phase6.live.smoke.py  verify.package.py
tests/: test_advisory_runtime.py  test_classifier_fallback.py  test_classifier_mode_mapping.py  test_cooperative_modes.py  test_loopcraft_assistive_hygiene.py  test_loopcraft_positioning.py  test_phase4_audit_and_wording.py  test_phase5_mode_lifecycle.py  test_phase6_behavior_simulation.py  test_proofrail.py  test_readback_validation_regression.py  test_task_understanding.py
