[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proofrail"
version = "0.0.9"
description = "LoopCraft loop engineering runtime for Hermes with evidence-first execution, verification, and self-correcting agent workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Yuheng"}]
keywords = ["hermes", "agent", "runtime", "harness", "agent harness", "codex harness", "claude code harness", "loopcraft", "loop engineering", "evidence-first"]
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = []

[tool.setuptools]
packages = ["proofrail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-p", "no:cacheprovider"]

[tool.setuptools.package-data]
proofrail = ["py.typed"]
